--- a/index.html
+++ b/index.html
@@ -3,97 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professor [Your Last Name]</title>
+    <title>Jinyang Li</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <style>
-        /* Custom color scheme */
-        :root {
-            --primary-color: #4A6D77;
-            --primary: #4682B4;
-            --blue: #4682B4;
-            --secondary-color: #6c757d;
-            --accent-color: #28a745;
-            --link-color: #8FB3AA;
-        }
-
-        body {
-            font-family: sans-serif;
-            color: #333;
-        }
-
-        a {
-            color: var(--link-color);
-            text-decoration: none;
-        }
-	img {
-		border-radius:20px;
-	}
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .navbar.navbar-dark {
-            background-color: var(--primary-color) !important;
-        }
-
-	.navbar-dark.navbar-brand img {
-	   border: 0px;
-	}
-	
-        .navbar-brand, .nav-link {
-            color: white !important;
-        }
-
-        .navbar-brand:hover, .nav-link:hover {
-            color: #f8f9fa !important;
-        }
-
-        .profile-image {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-right: 20px;
-        }
-
-        .project-card {
-            border: 1.5px solid #dee2e6;
-            border-radius: 0.25rem;
-            padding: 8px;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            background-color: #F5F8F6;
-	    font-family: "Georgia", sans-serif;
-        }
-
-        .project-card h4 {
-            color: #333;
-            margin-bottom: 0.5rem;
-	    font-size: 1.1em;
-        }
-	.project-card p {
-	    font-size: 0.9em;
-	}
-
-
-        h2 {
-            color: var(--primary-color);
-            border-bottom: 2px solid var(--primary-color);
-            padding-bottom: 0.5rem;
-            margin-top: 1rem;
-	    font-size: 1.4em;
-        }
-
-        footer {
-            background-color: #f8f9fa;
-            padding: 1rem 0;
-            border-top: 1px solid #dee2e6;
-            color: var(--secondary-color);
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="sty.css">
 </head>
 <body>
 
@@ -105,22 +19,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+		<li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+		<li class="nav-item">
+                    <a class="nav-link" href="#open-source">Research</a>
+                </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#publications">Publications</a>
+                    <a class="nav-link" href="pub/index.html">Publications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#teaching">Teaching</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#research">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#open-source">Open Source</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
-            </ul>
+                </ul>
         </div>
 	</div>
     </nav>
@@ -153,16 +65,16 @@
                     <div class="project-card">
                         <h4>Grendel: Distributed 3D Gaussian Splatting</h4>
                         <p>A distributed training system that enables unprecedented scaling of Guassian Splatting and other point-based rendering algorithms for 3D reconstruction.</p>
-			<span> Github <a href="https://github.com/dmlc/dgl"><i class="bi bi-github"></i></a> </span>
- 			<span style="margin-left:20px;"> ICLR'25 Oral <a href="https://github.com/dmlc/dgl"><i class="bi bi-file-earmark"></i></a></span>
+			<span> Github <a href="https://github.com/nyu-systems/Grendel-GS"><i class="bi bi-github"></i></a> </span>
+ 			<span style="margin-left:20px;"> ICLR'25 Oral <a href="https://arxiv.org/abs/2406.18533"><i class="bi bi-file-earmark"></i></a></span>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="project-card row align-items-center">
-                        <h4><img src="dgl-logo.png" height=45></h4>
+                        <h4><a href="https://dgl.ai"><img src="dgl-logo.png" height=45></a></h4>
                         <p>A fast and memory-efficient message-passing programming framework for training Graph Neural Networks.</p>
 			<span>Github <a href="https://github.com/dmlc/dgl"><i class="bi bi-github"></i></a> </span>
- 			<span style="margin-left:20px;">Paper <a href="https://github.com/dmlc/dgl"><i class="bi bi-file-earmark"></i></a></span>
+ 			<span style="margin-left:20px;">Paper <a href="https://arxiv.org/abs/1909.01315"><i class="bi bi-file-earmark"></i></a></span>
                     </div>
                 </div>
                 </div>
@@ -171,9 +83,20 @@
         <section id="publications" class="mb-5">
             <h2>Recent Publications <span style="margin-left:10px; font-size:0.7em;">All <a href="pub/"><i class="bi bi-link"></i></a></span></h2>
             <ul>
-                <li>[Year] - [Publication Title] - [Journal/Conference]</li>
-                <li>[Year] - [Another Publication Title] - [Journal/Conference]</li>
-		<li><a href="pub/">More...</a></li>
+                <li>[OSDI 2025] <span> Understanding Stragglers in Large Model Training Using What-if Analysis</span></li>
+                <li>[ICLR 2025] <span> On Scaling Up 3D Gaussian Splatting Training</span></li>
+                <li>[NSDI 2025] <span> Runtime Protocol Refinement Checking for Distributed Protocol Implementations</span></li>
+                <li>[SIGMOD 2025] <span> Automated Validating and Fixing of Text-to-SQL Translation with Execution Consistency</span></li>
+                <li>[SIGMOD 2025] <span> DiskGNN: Bridging I/O Efficiency and Model Accuracy for Out-of-Core GNN Training</span></li>
+		<li>[Eurosys 2025] <span>Stateful Large Language Model Serving with Pensiev</span></li>
+            </ul>
+        </section>
+
+	<section id="teaching" class="mb-5">
+            <h2>Teaching</h2>
+            <ul>
+                <li>[Fall 2025] <span><a href="https://nyu-mlsys.github.io">Machine Learning Systems</a></span></li>
+                <li>[Spring 2026] <span>Computer Systems Organization</span></li>
             </ul>
         </section>
 
@@ -190,21 +113,7 @@
             </ul>
         </section>
 
-        <section id="teaching" class="mb-5">
-            <h2>Teaching</h2>
-            <ul>
-                <li>[Semester, Year] - [Course Name] ([Course Number])</li>
-                <li>[Semester, Year] - [Another Course Name] ([Course Number])</li>
-            </ul>
-        </section>
-
         
-        <section id="contact" class="mb-5">
-            <h2>Contact</h2>
-            <p>Office: [Your Office Location]</p>
-            <p>Email: <a href="mailto:[your.email@nyu.edu]">[your.email@nyu.edu]</a></p>
-        </section>
-
         <footer class="mt-5 text-center">
             <p>&copy; [2025] [Jinyang Li]. All rights reserved.</p>
         </footer>
