--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
 
         <section id="open-source" class="mb-5">
-            <h2>Select Open Source Projects</h2>
+            <h2>Selected Open Source Projects</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="project-card">
