--- a/pub/index.html
+++ b/pub/index.html
@@ -63,7 +63,7 @@ SIGMOD 2025,
 </p>
 
 <p><b>DiskGNN: Bridging I/O Efficiency and Model Accuracy for Out-of-Core GNN Training</b> <br>
-Renjie Liu, Yichuan Wang, Xiao Yan, Haitian Jiang, Zhenkun Cai, Minjie Wang, Bo Tang, Jinyang Li<br>
+Renjie Liu*, Yichuan Wang*, Xiao Yan, Haitian Jiang, Zhenkun Cai, Minjie Wang, Bo Tang, Jinyang Li (* marks equal contribution)<br>
 SIGMOD 2025,
 <a href="https://arxiv.org/abs/2405.05231"><i class="bi bi-file-earmark"></i></a>
 </p>
@@ -102,7 +102,7 @@ ASPLOS, 2023 (<font color="red">Distinguished Artifact Award</font>)<br>
 <p>
 <b>Measuring the Effect of Training Data on Deep Learning Predictions via Randomized Experiments</b>
 [<a href="https://arxiv.org/abs/2206.10013">arXiv</a>]<br>
-Jinkun Lin, Anqi Zhang, Mathias Lecuyer, Jinyang Li, Aurojit Panda, Siddhartha Sen<br>
+Jinkun Lin*, Anqi Zhang*, Mathias Lecuyer, Jinyang Li, Aurojit Panda, Siddhartha Sen (* marks equal contribution)<br>
 ICML, 2022 <br>
 
 <p>
