--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
 	<section id="research" class="mb-5">
-            <h2></h2>
+            <h2>Introduction</h2>
             <p>I'm a professor of <a href="https://cs.nyu.edu">Computer Science</a> at the <a href="https://cims.nyu.edu">Courant Institute of Mathematical Sciences</a> at New York University. My research focuses on machine learning systems, distributed and parallel computing, and database systems. I'm particularly interested in building better system abstractions to make it easier to develop distributed and parallel applications, pushing performance using modern hardware and smarter designs, and improving system reliability overall. I've been fortunate to work with a talented group of students—together, we publish our work and open-source the ideas we're most excited about.
         </section>
 
