--- a/pub/index.html
+++ b/pub/index.html
@@ -42,6 +42,12 @@
     <div class="container mt-5">
 <h1>Jinyang Li's Publications</h1>
 <br>
+
+<p><b>Sonata: Multi-Database Transactions Made Fast and Serializable</b>
+Chuzhe Tang, Zhaoguo Wang, Jinyang Li, and Haibo Chen<br>
+VLDB 2025<br>
+</p>
+
 <p>
 <b>On Scaling Up 3D Gaussian Splatting Training</b><br>
 Hexu Zhao, Haoyang Weng, Daohan Lu, Ang Li, Jinyang Li, Aurojit Panda, Saining Xie<br>
