--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <h2>Recent Publications <span style="margin-left:10px; font-size:0.7em;">All <a href="pub/"><i class="bi bi-link"></i></a></span></h2>
             <ul>
 		<li>[VLDB 2025] <span> Sonata: Multi-Database Transactions Made Fast and Serializable </span></li>
+		<li>[COLM 2025] <span> Hidden Verifiers: Revealing Reasoning Models’ Ability to Check Themselves </span></li>
                 <li>[OSDI 2025] <span> Understanding Stragglers in Large Model Training Using What-if Analysis</span></li>
                 <li>[ICLR 2025] <span> On Scaling Up 3D Gaussian Splatting Training</span></li>
                 <li>[NSDI 2025] <span> Runtime Protocol Refinement Checking for Distributed Protocol Implementations</span></li>
