--- a/pub/index.html
+++ b/pub/index.html
@@ -48,6 +48,11 @@ Chuzhe Tang, Zhaoguo Wang, Jinyang Li, and Haibo Chen<br>
 VLDB 2025<br>
 </p>
 
+<p><b>Hidden Verifiers: Revealing Reasoning Models’ Ability to Check Themselves. </b>
+Anqi Zhihong, Yulin Chen, Jane Pan, Chen Zhao, Aurojit Panda, Jinyang Li, He He. <br>
+COLM 2025<br>
+</p>
+
 <p>
 <b>On Scaling Up 3D Gaussian Splatting Training</b><br>
 Hexu Zhao, Haoyang Weng, Daohan Lu, Ang Li, Jinyang Li, Aurojit Panda, Saining Xie<br>
