--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 	<section id="students" class="mb-5">
             <h2>Students</h2>
-           <p>I am co-advising many wonderful Ph.D. students with Prof. Panda</p>
+           <p>I am co-advising many wonderful Ph.D. students with <a href="https://cs.nyu.edu/~apanda/">Aurojit Panda</a></p>
             <ul>
                 <li>Ding Ding</li>
                 <li>Haitian Jiang</li>
@@ -111,6 +111,7 @@
                 <li>David Pissara</li>
                 <li>Anqi Zhang</li>
                 <li>Hexu Zhao</li>
+		<li>Daniel Qian (also co-advised with <a href="https://anirudhsk.github.io/">Anirudh Sivaraman</a>)</li>
             </ul>
         </section>
 
